* Allow goods products in assets
* Allow to classify assets by type
* Fix asset menu entry translation

Version 3.4.0 - 2014-11-03
* Initial release