@@ -1,3 +1,4 @@
+* Remove required on asset name
 * Allow goods products in assets
 * Allow to classify assets by type
 * Fix asset menu entry translation
